updated with spring 3.0.2

--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.data.mongodb.database=productdb
 #spring.data.mongodb.port=27017
 #spring.data.mongodb.username=
 #spring.data.mongodb.password=
+de.flapdoodle.mongodb.embedded.version=4.4.1
