--- a/product-service/pom.xml
+++ b/product-service/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.4.2</version>
+		<version>3.0.2</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.vinsguru</groupId>
@@ -14,7 +14,7 @@
 	<name>product-service</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
-		<java.version>11</java.version>
+		<java.version>17</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -38,8 +38,8 @@
 		</dependency>
 		<dependency>
 			<groupId>de.flapdoodle.embed</groupId>
-			<artifactId>de.flapdoodle.embed.mongo</artifactId>
-			<!--<scope>test</scope>-->
+			<artifactId>de.flapdoodle.embed.mongo.spring30x</artifactId>
+			<version>4.4.1</version>
 		</dependency>
 		<dependency>
 			<groupId>io.projectreactor</groupId>
