--- a/03-final-project/trade-platofrm/aggregator-service/pom.xml
+++ b/03-final-project/trade-platofrm/aggregator-service/pom.xml
@@ -15,13 +15,13 @@
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>21</java.version>
+		<mock-server.version>5.15.0</mock-server.version>
 	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-webflux</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -35,7 +35,7 @@
 		<dependency>
 			<groupId>org.mock-server</groupId>
 			<artifactId>mockserver-spring-test-listener-no-dependencies</artifactId>
-			<version>5.14.0</version>
+			<version>${mock-server.version}</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
